run Get_POIs, no issues, added session_info

--- a/src/Get_POIs.ipynb
+++ b/src/Get_POIs.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Johan\\PycharmProjects\\heal_paper\n"
+      "/home/jovyan/accessibility-analysis-isocalors\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,31 +171,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_111/1385233226.py:87: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  gdf = gdf.groupby('name', group_keys=False).apply(filter_nearby_duplicates)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to c:\\Users\\Johan\\PycharmProjects\\heal_paper\\data\\pois_hd_supermarket_osm.geojson\n",
+      "Data saved to /home/jovyan/accessibility-analysis-isocalors/data/pois_hd_supermarket_osm.geojson\n",
       "\n",
       "Statistics:\n",
-      "supermarket    54\n",
-      "Name: category, dtype: int64\n",
+      "category\n",
+      "supermarket    55\n",
+      "Name: count, dtype: int64\n",
       "\n",
-      "Total number of POIs: 54\n",
-      "Data saved to c:\\Users\\Johan\\PycharmProjects\\heal_paper\\data\\pois_hd_health_osm.geojson\n",
+      "Total number of POIs: 55\n",
+      "Data saved to /home/jovyan/accessibility-analysis-isocalors/data/pois_hd_health_osm.geojson\n",
       "\n",
       "Statistics:\n",
-      "doctors         172\n",
+      "category\n",
+      "doctors         175\n",
       "kindergarten    147\n",
       "pharmacy         38\n",
       "hospital         32\n",
       "clinic           10\n",
-      "Name: category, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
-      "Total number of POIs: 399\n"
+      "Total number of POIs: 402\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_111/1385233226.py:87: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  gdf = gdf.groupby('name', group_keys=False).apply(filter_nearby_duplicates)\n"
      ]
     }
    ],
@@ -216,20 +234,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to c:\\Users\\Johan\\PycharmProjects\\heal_paper\\data\\pois_hd_transport_osm.geojson\n",
+      "Data saved to /home/jovyan/accessibility-analysis-isocalors/data/pois_hd_transport_osm.geojson\n",
       "\n",
       "Statistics:\n",
+      "category\n",
       "transport    356\n",
-      "Name: category, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "Total number of POIs: 356\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_111/3254130208.py:83: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  gdf = gdf.groupby('name', group_keys=False).apply(filter_nearby_duplicates)\n"
      ]
     }
    ],
@@ -344,18 +371,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to c:\\Users\\Johan\\PycharmProjects\\heal_paper\\data\\pois_hd_senior_facility_osm.geojson\n",
+      "Data saved to /home/jovyan/accessibility-analysis-isocalors/data/pois_hd_senior_facility_osm.geojson\n",
       "\n",
       "Statistics:\n",
+      "category\n",
       "senior_facility    14\n",
-      "Name: category, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
       "Total number of POIs: 14\n"
      ]
@@ -442,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Combined data saved to c:\\Users\\Johan\\PycharmProjects\\heal_paper\\data\\pois_hd_senior_facility_combined.geojson\n"
+      "Combined data saved to /home/jovyan/accessibility-analysis-isocalors/data/pois_hd_senior_facility_combined.geojson\n"
      ]
     }
    ],
@@ -501,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -511,16 +539,17 @@
       "Combined GeoJSON saved to: data/pois_hd_osm.geojson\n",
       "\n",
       "Statistics:\n",
-      "doctors            172\n",
+      "category\n",
+      "doctors            175\n",
       "kindergarten       147\n",
-      "supermarket         54\n",
+      "supermarket         55\n",
       "pharmacy            38\n",
       "hospital            32\n",
       "senior_facility     31\n",
       "clinic              10\n",
-      "Name: category, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "\n",
-      "Total number of POIs: 484\n"
+      "Total number of POIs: 488\n"
      ]
     }
    ],
@@ -563,11 +592,141 @@
     "# Combine files\n",
     "combine_geojson_files(input_files, output_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<details>\n",
+       "<summary>Click to view session information</summary>\n",
+       "<pre>\n",
+       "-----\n",
+       "geopandas           1.0.1\n",
+       "overpy              0.7\n",
+       "pandas              2.2.2\n",
+       "session_info        1.0.0\n",
+       "shapely             2.0.4\n",
+       "-----\n",
+       "</pre>\n",
+       "<details>\n",
+       "<summary>Click to view modules imported as dependencies</summary>\n",
+       "<pre>\n",
+       "anyio                       NA\n",
+       "arrow                       1.2.3\n",
+       "asttokens                   NA\n",
+       "attr                        23.1.0\n",
+       "attrs                       23.1.0\n",
+       "babel                       2.12.1\n",
+       "backcall                    0.2.0\n",
+       "brotli                      1.0.9\n",
+       "certifi                     2023.07.22\n",
+       "charset_normalizer          3.2.0\n",
+       "colorama                    0.4.6\n",
+       "comm                        0.1.3\n",
+       "cython_runtime              NA\n",
+       "dateutil                    2.8.2\n",
+       "debugpy                     1.6.7\n",
+       "decorator                   5.1.1\n",
+       "executing                   1.2.0\n",
+       "fastjsonschema              NA\n",
+       "fqdn                        NA\n",
+       "idna                        3.4\n",
+       "ipykernel                   6.25.0\n",
+       "isoduration                 NA\n",
+       "jedi                        0.18.2\n",
+       "jinja2                      3.1.2\n",
+       "json5                       NA\n",
+       "jsonpointer                 2.0\n",
+       "jsonschema                  4.18.4\n",
+       "jsonschema_specifications   NA\n",
+       "jupyter_events              0.6.3\n",
+       "jupyter_server              2.7.0\n",
+       "jupyterlab_server           2.24.0\n",
+       "markupsafe                  2.1.3\n",
+       "nbformat                    5.9.1\n",
+       "numpy                       1.26.4\n",
+       "overrides                   NA\n",
+       "packaging                   24.2\n",
+       "parso                       0.8.3\n",
+       "pexpect                     4.8.0\n",
+       "pickleshare                 0.7.5\n",
+       "pkg_resources               NA\n",
+       "platformdirs                3.9.1\n",
+       "prometheus_client           NA\n",
+       "prompt_toolkit              3.0.39\n",
+       "psutil                      5.9.5\n",
+       "ptyprocess                  0.7.0\n",
+       "pure_eval                   0.2.2\n",
+       "pydev_ipython               NA\n",
+       "pydevconsole                NA\n",
+       "pydevd                      2.9.5\n",
+       "pydevd_file_utils           NA\n",
+       "pydevd_plugins              NA\n",
+       "pydevd_tracing              NA\n",
+       "pygments                    2.15.1\n",
+       "pyogrio                     0.9.0\n",
+       "pyproj                      3.6.2.dev0\n",
+       "pythonjsonlogger            NA\n",
+       "pytz                        2023.3\n",
+       "referencing                 NA\n",
+       "requests                    2.31.0\n",
+       "rfc3339_validator           0.1.4\n",
+       "rfc3986_validator           0.1.1\n",
+       "rpds                        NA\n",
+       "send2trash                  NA\n",
+       "six                         1.16.0\n",
+       "sniffio                     1.3.0\n",
+       "socks                       1.7.1\n",
+       "stack_data                  0.6.2\n",
+       "tornado                     6.3.2\n",
+       "traitlets                   5.9.0\n",
+       "uri_template                NA\n",
+       "urllib3                     2.0.4\n",
+       "wcwidth                     0.2.6\n",
+       "webcolors                   1.13\n",
+       "websocket                   1.6.1\n",
+       "yaml                        6.0\n",
+       "zmq                         25.1.0\n",
+       "zstandard                   0.19.0\n",
+       "</pre>\n",
+       "</details> <!-- seems like this ends pre, so might as well be explicit -->\n",
+       "<pre>\n",
+       "-----\n",
+       "IPython             8.14.0\n",
+       "jupyter_client      8.3.0\n",
+       "jupyter_core        5.3.1\n",
+       "jupyterlab          4.0.3\n",
+       "notebook            7.0.0\n",
+       "-----\n",
+       "Python 3.11.4 | packaged by conda-forge | (main, Jun 10 2023, 18:08:17) [GCC 12.2.0]\n",
+       "Linux-5.15.167.4-microsoft-standard-WSL2-x86_64-with-glibc2.35\n",
+       "-----\n",
+       "Session information updated at 2025-03-14 08:12\n",
+       "</pre>\n",
+       "</details>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import session_info\n",
+    "session_info.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "geoscripting",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -581,9 +740,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
