add driver arg and change append func

--- a/src/Isocalors_POI.ipynb
+++ b/src/Isocalors_POI.ipynb
@@ -209,7 +209,7 @@
     "                isocalors_df_temp['start_point'] = [c]\n",
     "                \n",
     "                # Append the temporary GeoDataFrame to the main GeoDataFrame\n",
-    "                isocalors_df = isocalors_df.append(isocalors_df_temp, ignore_index=True)"
+    "                isocalors_df = isocalors_df._append(isocalors_df_temp, ignore_index=True)"
    ]
   },
   {
@@ -345,7 +345,7 @@
     "print(isocalors_df.head())\n",
     "\n",
     "# Write the GeoDataFrame to a GeoJSON file\n",
-    "pyogrio.write_dataframe(isocalors_df, f'{Path.cwd()}/data//isocalor_{pois_name}_all.json')"
+    "pyogrio.write_dataframe(isocalors_df, f'{Path.cwd()}/data//isocalor_{pois_name}_all.json', driver = \"GeoJSON\")"
    ]
   },
   {
@@ -385,7 +385,7 @@
     "    unitary_union = filtered_df['geometry'].unary_union\n",
     "    \n",
     "    # Create a new row for the unitary union object in the unitary_union_df\n",
-    "    unitary_union_df = unitary_union_df.append({'timeofday': row['timeofday'],\n",
+    "    unitary_union_df = unitary_union_df._append({'timeofday': row['timeofday'],\n",
     "                                                'shadow_factor': row['shadow_factor'],\n",
     "                                                'value': row['value'],\n",
     "                                                'geometry': unitary_union}, ignore_index=True)\n",
@@ -471,7 +471,7 @@
     "unitary_union_df = unitary_union_df.to_crs(epsg=25832)\n",
     "\n",
     "# Export the unitary union objects to a GeoJSON file\n",
-    "pyogrio.write_dataframe(unitary_union_df, f'{Path.cwd()}/data//vul_area_masks_{pois_name}_all.json')"
+    "pyogrio.write_dataframe(unitary_union_df, f'{Path.cwd()}/data//vul_area_masks_{pois_name}_all.json', driver = \"GeoJSON\")"
    ]
   },
   {
@@ -504,7 +504,7 @@
     "difference_gdf = difference_gdf.to_crs(epsg=25832)\n",
     "\n",
     "# Export the difference objects objects to a GeoJSON file\n",
-    "pyogrio.write_dataframe(difference_gdf, f'{Path.cwd()}/data//vul_areas_{pois_name}_all.json')"
+    "pyogrio.write_dataframe(difference_gdf, f'{Path.cwd()}/data//vul_areas_{pois_name}_all.json', driver = \"GeoJSON\")"
    ]
   },
   {
@@ -527,13 +527,13 @@
     "    return len(pois), len(filtered_pois)\n",
     "\n",
     "# Define file paths and read isocalors\n",
-    "isocals = gpd.read_file(f'{Path.cwd()}\\data\\\\vul_area_masks_{pois_name}_all.json')\n",
+    "isocals = gpd.read_file(f'{Path.cwd()}/data//vul_area_masks_{pois_name}_all.json')\n",
     "isocals = isocals[(isocals['timeofday']=='noon') & (isocals['shadow_factor']==5.0) & (isocals['value']==900.0)] # Filter for specific scenario if necessary\n",
     "\n",
     "results = []\n",
     "\n",
     "# Process OSM POIs\n",
-    "osm_pois = gpd.read_file(f'{Path.cwd()}\\data\\\\pois_hd_osm.geojson')\n",
+    "osm_pois = gpd.read_file(f'{Path.cwd()}/data//pois_hd_osm.geojson')\n",
     "for category in ['clinic', 'doctors', 'hospital', 'pharmacy', 'supermarket', 'senior_facility', 'kindergarten']:\n",
     "    pois_temp = osm_pois[osm_pois['category'] == category]\n",
     "    total, filtered = process_pois(pois_temp, isocals)\n",
@@ -586,7 +586,7 @@
     "pois_name = 'transport'\n",
     "\n",
     "# Export results\n",
-    "pyogrio.write_dataframe(results_gdf, f'{Path.cwd()}/data//filtered_pois_noon_5_15.json')"
+    "pyogrio.write_dataframe(results_gdf, f'{Path.cwd()}/data//filtered_pois_noon_5_15.json', driver = \"GeoJSON\")"
    ]
   },
   {
@@ -687,7 +687,7 @@
     "isocalors_df_area = isocalors_df_area[isocalors_df_area['shadow_factor'] > 0.0]  \n",
     "\n",
     "# Export the isocalors with area differences to a GeoJSON file\n",
-    "pyogrio.write_dataframe(isocalors_df_area, f'{Path.cwd()}/data//isocalor_area_transport_all.json')"
+    "pyogrio.write_dataframe(isocalors_df_area, f'{Path.cwd()}/data//isocalor_area_transport_all.json', driver = \"GeoJSON\")"
    ]
   },
   {
@@ -784,7 +784,7 @@
     "isocalors_df_pop = isocalors_df_pop[isocalors_df_pop['shadow_factor'] > 0.0]\n",
     "\n",
     "# Export the isocalors with population differences to a GeoJSON file\n",
-    "pyogrio.write_dataframe(isocalors_df_pop, f'{Path.cwd()}/data//isocalor_pop_transport_all.json')"
+    "pyogrio.write_dataframe(isocalors_df_pop, f'{Path.cwd()}/data//isocalor_pop_transport_all.json', driver = \"GeoJSON\")"
    ]
   },
   {
