--- a/src/Isocalors_POI.ipynb
+++ b/src/Isocalors_POI.ipynb
@@ -130,8 +130,8 @@
    ],
    "source": [
     "# Define a subset of the coordinates (for testing purposes only)\n",
-    "coordinates = coordinates[:10]\n",
-    "coordinates"
+    "# coordinates = coordinates[:10]\n",
+    "# coordinates"
    ]
   },
   {
