--- a/src/lcz_analysis.ipynb
+++ b/src/lcz_analysis.ipynb
@@ -273,7 +273,7 @@
       "0   morning  0.035857     14334.694796  \n",
       "1   morning  0.013565      1548.125989  \n",
       "2   morning  0.005472         0.000000  \n",
-      "3   morning  0.488429      3163.204435  \n",
+      "3   morning  0.488429      3163.204403  \n",
       "4   morning  0.116249      1092.480414  \n"
      ]
     }
@@ -434,7 +434,7 @@
       "0     14334.694796  MULTIPOLYGON (((475604.775 5472209.353, 475510...   \n",
       "1      1548.125989  MULTIPOLYGON (((480010.350 5471634.861, 479986...   \n",
       "2         0.000000  MULTIPOLYGON (((478318.005 5473481.543, 478272...   \n",
-      "3      3163.204435  MULTIPOLYGON (((476650.068 5468795.024, 476651...   \n",
+      "3      3163.204403  MULTIPOLYGON (((476650.068 5468795.024, 476651...   \n",
       "4      1092.480414  MULTIPOLYGON (((473641.103 5472550.817, 473635...   \n",
       "\n",
       "   pop_lcz_total  area_km2_lcz_total  transport_count_lcz_total  \\\n",
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +633,9 @@
     "]\n",
     "\n",
     "labels = ['heat sensitivity factor 5', 'heat sensitivity factor 3']\n",
+    "\n",
+    "# Define layout\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')\n",
     "\n",
     "# Create a figure for the absolute number of vulnerable people\n",
     "fig, ax = plt.subplots(figsize=(21, 14))\n",
@@ -685,7 +688,6 @@
     "\n",
     "# Adjust layout and spacing\n",
     "plt.tight_layout()\n",
-    "plt.style.use('seaborn-v0_8-darkgrid')\n",
     "\n",
     "# Save the plot as an image and display it\n",
     "plt.savefig(f'{Path.cwd()}/img/LCZ-mean_vul_people_absolute_hf5_3.png', dpi=600)\n",
