--- a/src/Isocalors_POI.ipynb
+++ b/src/Isocalors_POI.ipynb
@@ -115,31 +115,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[8.7561098, 49.4160568],\n",
-       " [8.6628297, 49.4056451],\n",
-       " [8.6723434, 49.38309670000001],\n",
-       " [8.67217, 49.3841071],\n",
-       " [8.6589861, 49.3786647],\n",
-       " [8.6912464, 49.3999244],\n",
-       " [8.7108, 49.4136759],\n",
-       " [8.7086199, 49.4133846],\n",
-       " [8.708932, 49.4152724],\n",
-       " [8.7311542, 49.3881645]]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a subset of the coordinates (for testing purposes only)\n",
-    "coordinates = coordinates[:10]\n",
-    "coordinates"
+    "#coordinates = coordinates[:10]\n",
+    "#coordinates"
    ]
   },
   {
@@ -852,126 +832,126 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1195</th>\n",
+       "      <th>42715</th>\n",
        "      <td>0</td>\n",
        "      <td>1800.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>evening</td>\n",
-       "      <td>node/303222540</td>\n",
+       "      <td>node/313843360</td>\n",
        "      <td>None</td>\n",
-       "      <td>Alois-Link-Platz</td>\n",
-       "      <td>7177.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>11.794924</td>\n",
-       "      <td>Weststadt</td>\n",
-       "      <td>POLYGON ((8.68393 49.40167, 8.68424 49.40019, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1196</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>node/300751566</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Alte Brücke</td>\n",
-       "      <td>9071.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>11.400153</td>\n",
-       "      <td>Altstadt</td>\n",
-       "      <td>POLYGON ((8.6973 49.41023, 8.70094 49.4076, 8....</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1197</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>way/321018184</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Alte Brücke</td>\n",
-       "      <td>10482.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>10.505779</td>\n",
-       "      <td>Altstadt</td>\n",
-       "      <td>POLYGON ((8.69384 49.40987, 8.6955 49.40832, 8...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1198</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>node/297489765</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Alte Brücke Nord</td>\n",
-       "      <td>6101.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>10.078612</td>\n",
-       "      <td>Neuenheim</td>\n",
-       "      <td>POLYGON ((8.69387 49.41322, 8.69427 49.41312, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1199</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1800.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>evening</td>\n",
-       "      <td>node/336422077</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Alter Kohlhof</td>\n",
-       "      <td>83.0</td>\n",
+       "      <td>Wielandtstraße</td>\n",
+       "      <td>11025.0</td>\n",
        "      <td>8.0</td>\n",
-       "      <td>0.738513</td>\n",
-       "      <td>Altstadt</td>\n",
-       "      <td>POLYGON ((8.70771 49.40123, 8.70812 49.40027, ...</td>\n",
+       "      <td>4.712288</td>\n",
+       "      <td>Neuenheim</td>\n",
+       "      <td>POLYGON ((8.6713 49.41753, 8.67183 49.41581, 8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42716</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>node/4253021823</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Wolfsbrunnensteige</td>\n",
+       "      <td>934.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.192706</td>\n",
+       "      <td>Schlierbach</td>\n",
+       "      <td>POLYGON ((8.73247 49.40962, 8.73265 49.40921, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42717</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>node/297020314</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ziegelhausen Altes Rathaus</td>\n",
+       "      <td>2900.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>19.418420</td>\n",
+       "      <td>Ziegelhausen</td>\n",
+       "      <td>POLYGON ((8.74935 49.4167, 8.74938 49.41634, 8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42718</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>node/374420834</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Ziegelhausen Kirche</td>\n",
+       "      <td>2560.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>22.837983</td>\n",
+       "      <td>Ziegelhausen</td>\n",
+       "      <td>POLYGON ((8.75081 49.41709, 8.75169 49.41675, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42719</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>evening</td>\n",
+       "      <td>node/283554155</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Zoo</td>\n",
+       "      <td>588.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.246735</td>\n",
+       "      <td>Neuenheim</td>\n",
+       "      <td>POLYGON ((8.65922 49.41588, 8.65922 49.41579, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1200 rows × 12 columns</p>\n",
+       "<p>42720 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      group_index   value  shadow_factor timeofday           osm_id fclass  \\\n",
-       "0               0   300.0            0.0   morning   node/300751575   None   \n",
-       "1               0   300.0            0.0   morning  node/4801418695   None   \n",
-       "2               0   300.0            0.0   morning   node/366396868   None   \n",
-       "3               0   300.0            0.0   morning  node/9864445805   None   \n",
-       "4               0   300.0            0.0   morning  node/8388878952   None   \n",
-       "...           ...     ...            ...       ...              ...    ...   \n",
-       "1195            0  1800.0            5.0   evening   node/303222540   None   \n",
-       "1196            0  1800.0            5.0   evening   node/300751566   None   \n",
-       "1197            0  1800.0            5.0   evening    way/321018184   None   \n",
-       "1198            0  1800.0            5.0   evening   node/297489765   None   \n",
-       "1199            0  1800.0            5.0   evening   node/336422077   None   \n",
+       "       group_index   value  shadow_factor timeofday           osm_id fclass  \\\n",
+       "0                0   300.0            0.0   morning   node/300751575   None   \n",
+       "1                0   300.0            0.0   morning  node/4801418695   None   \n",
+       "2                0   300.0            0.0   morning   node/366396868   None   \n",
+       "3                0   300.0            0.0   morning  node/9864445805   None   \n",
+       "4                0   300.0            0.0   morning  node/8388878952   None   \n",
+       "...            ...     ...            ...       ...              ...    ...   \n",
+       "42715            0  1800.0            5.0   evening   node/313843360   None   \n",
+       "42716            0  1800.0            5.0   evening  node/4253021823   None   \n",
+       "42717            0  1800.0            5.0   evening   node/297020314   None   \n",
+       "42718            0  1800.0            5.0   evening   node/374420834   None   \n",
+       "42719            0  1800.0            5.0   evening   node/283554155   None   \n",
        "\n",
-       "                     name  population  pois_num  pois_density_km2  \\\n",
-       "0         Adler-Überfahrt       140.0       2.0         23.393852   \n",
-       "1            Agnesistraße      2192.0       3.0         11.589035   \n",
-       "2     Albert-Fritz-Straße      2742.0       2.0          5.498026   \n",
-       "3     Albert-Fritz-Straße      2600.0       2.0          5.445110   \n",
-       "4      Alfred-Jost-Straße      2693.0       3.0          8.959942   \n",
-       "...                   ...         ...       ...               ...   \n",
-       "1195     Alois-Link-Platz      7177.0       9.0         11.794924   \n",
-       "1196          Alte Brücke      9071.0      19.0         11.400153   \n",
-       "1197          Alte Brücke     10482.0      21.0         10.505779   \n",
-       "1198     Alte Brücke Nord      6101.0      12.0         10.078612   \n",
-       "1199        Alter Kohlhof        83.0       8.0          0.738513   \n",
+       "                             name  population  pois_num  pois_density_km2  \\\n",
+       "0                 Adler-Überfahrt       140.0       2.0         23.393852   \n",
+       "1                    Agnesistraße      2192.0       3.0         11.589035   \n",
+       "2             Albert-Fritz-Straße      2742.0       2.0          5.498026   \n",
+       "3             Albert-Fritz-Straße      2600.0       2.0          5.445110   \n",
+       "4              Alfred-Jost-Straße      2693.0       3.0          8.959942   \n",
+       "...                           ...         ...       ...               ...   \n",
+       "42715              Wielandtstraße     11025.0       8.0          4.712288   \n",
+       "42716          Wolfsbrunnensteige       934.0       7.0          5.192706   \n",
+       "42717  Ziegelhausen Altes Rathaus      2900.0      12.0         19.418420   \n",
+       "42718         Ziegelhausen Kirche      2560.0      14.0         22.837983   \n",
+       "42719                         Zoo       588.0       3.0          6.246735   \n",
        "\n",
-       "          quarter                                           geometry  \n",
-       "0     Schlierbach  POLYGON ((8.75006 49.4152, 8.75012 49.41509, 8...  \n",
-       "1       Bahnstadt  POLYGON ((8.65706 49.4063, 8.65899 49.40426, 8...  \n",
-       "2       Kirchheim  POLYGON ((8.66712 49.3826, 8.66799 49.38116, 8...  \n",
-       "3       Kirchheim  POLYGON ((8.66643 49.3841, 8.66717 49.38339, 8...  \n",
-       "4       Kirchheim  POLYGON ((8.65586 49.38098, 8.65743 49.37628, ...  \n",
-       "...           ...                                                ...  \n",
-       "1195    Weststadt  POLYGON ((8.68393 49.40167, 8.68424 49.40019, ...  \n",
-       "1196     Altstadt  POLYGON ((8.6973 49.41023, 8.70094 49.4076, 8....  \n",
-       "1197     Altstadt  POLYGON ((8.69384 49.40987, 8.6955 49.40832, 8...  \n",
-       "1198    Neuenheim  POLYGON ((8.69387 49.41322, 8.69427 49.41312, ...  \n",
-       "1199     Altstadt  POLYGON ((8.70771 49.40123, 8.70812 49.40027, ...  \n",
+       "            quarter                                           geometry  \n",
+       "0       Schlierbach  POLYGON ((8.75006 49.4152, 8.75012 49.41509, 8...  \n",
+       "1         Bahnstadt  POLYGON ((8.65706 49.4063, 8.65899 49.40426, 8...  \n",
+       "2         Kirchheim  POLYGON ((8.66712 49.3826, 8.66799 49.38116, 8...  \n",
+       "3         Kirchheim  POLYGON ((8.66643 49.3841, 8.66717 49.38339, 8...  \n",
+       "4         Kirchheim  POLYGON ((8.65586 49.38098, 8.65743 49.37628, ...  \n",
+       "...             ...                                                ...  \n",
+       "42715     Neuenheim  POLYGON ((8.6713 49.41753, 8.67183 49.41581, 8...  \n",
+       "42716   Schlierbach  POLYGON ((8.73247 49.40962, 8.73265 49.40921, ...  \n",
+       "42717  Ziegelhausen  POLYGON ((8.74935 49.4167, 8.74938 49.41634, 8...  \n",
+       "42718  Ziegelhausen  POLYGON ((8.75081 49.41709, 8.75169 49.41675, ...  \n",
+       "42719     Neuenheim  POLYGON ((8.65922 49.41588, 8.65922 49.41579, ...  \n",
        "\n",
-       "[1200 rows x 12 columns]"
+       "[42720 rows x 12 columns]"
       ]
      },
      "execution_count": 19,
@@ -1247,7 +1227,7 @@
        "Python 3.11.4 | packaged by conda-forge | (main, Jun 10 2023, 18:08:17) [GCC 12.2.0]\n",
        "Linux-5.15.167.4-microsoft-standard-WSL2-x86_64-with-glibc2.35\n",
        "-----\n",
-       "Session information updated at 2025-03-14 08:34\n",
+       "Session information updated at 2025-03-20 15:29\n",
        "</pre>\n",
        "</details>"
       ],
